PPF-002: inject svg-s

--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -1,4 +1,9 @@
 .footer {
-  background-color: rgb(33, 37, 41);
-  color: whitesmoke;
+  background-color: #90fa69;
+  color: #212529;
+  padding: 1rem;
+
+  svg {
+    fill: #212529;
+  }
 }
