PPF-002: restructure style files
Introduce scss variables and move all svg-s into a file.

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,9 @@
+@use "./variables" as vars;
+@import "./header/header";
+@import "./home/home";
+@import "./footer/footer";
 @import "~bootstrap/scss/bootstrap";
 
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: green;
+body {
+  font-family: "Pacifico", cursive;
 }
