--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -1,35 +1,34 @@
 .home {
   height: 100%;
   width: 100%;
-  font-family: "Pacifico", cursive;
   font-size: 1.5rem;
 
   h1 {
-    color: whitesmoke;
+    color: vars.$color-primary-light;
   }
 
   h2 {
-    color: #212529;
+    color: vars.$color-primary-dark;
     padding: 2rem 0;
   }
 
   // COVER IMAGE SECTION
 
   .cover-img-section {
-    background: url("../../public/cover.jpg");
+    background: url("/public/cover.jpg");
     height: 100vh;
     width: 100%;
     background-attachment: fixed;
     background-position: cover;
     background-repeat: no-repeat;
     animation: animatedBackground 25s linear infinite alternate;
-    background-color: #212529;
+    background-color: vars.$color-primary-dark;
     padding-top: 56px;
   }
 
   h1 {
-    text-shadow: 3px 3px 50px whitesmoke;
-    color: #00aed3;
+    text-shadow: 3px 3px 50px vars.$color-primary-light;
+    color: vars.$color-primary-blue;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(2px);
     padding: 1rem;
@@ -78,14 +77,14 @@
       min-height: 350px;
       margin-top: 3rem;
       p {
-        color: #6c757d;
+        color: vars.$color-primary-grey;
       }
       h2 {
-        background-color: whitesmoke;
+        background-color: vars.$color-primary-light;
       }
       .figure-img {
         padding-bottom: 2rem;
-        border-bottom: 15px dotted #00aed3;
+        border-bottom: 15px dotted vars.$color-primary-blue;
       }
     }
   }
