--- a/src/header/_header.scss
+++ b/src/header/_header.scss
@@ -1,3 +1,10 @@
 .header {
   color: vars.$color-primary-light;
+
+  a {
+    color: vars.$color-primary-light;
+    &:hover {
+      color: vars.$color-primary-green;
+    }
+  }
 }
