--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,7 @@
 @import "./footer/footer";
 @import "./header/header";
 @import "./home/home";
+@import "./registration/registration.scss";
 @import "~bootstrap/scss/bootstrap";
 
 body {
