--- a/src/registration/registration.scss
+++ b/src/registration/registration.scss
@@ -1,10 +1,15 @@
-.contact {
+.registration {
   height: 100%;
   width: 50%;
   padding: 0 1rem;
 
   h1 {
     margin-top: 5rem;
+  }
+
+  button {
+    z-index: 10;
+    position: relative;
   }
 
   @media screen and (max-width: 768px) {
